--- a/inn.html
+++ b/inn.html
@@ -17,6 +17,7 @@ a, a:hover, a:active, a:visited {
 
 pre {
   font-size: 16px;
+  overflow: scroll;
 }
 
 pre div {
@@ -113,11 +114,11 @@ sub {
 }
 
 .on-mobile {
-  font-size: 65px;
+  font-size: 45px;
 }
 
 .on-mobile pre {
-  font-size: 60px;
+  font-size: 40px;
 }
 
 .on-mobile .rooms, .on-mobile .about, .on-mobile .rules {
