--- a/inn.html
+++ b/inn.html
@@ -6,7 +6,7 @@ layout: null
 body, pre {
   font-family: 'dejavu sans mono', menlo, consolas, simsun, simkai, kaiti, simhei, serif;
   font-size: 18px;
-  line-height: 1.125;
+  line-height: 1.185;
   margin: 3px;
 }
 
@@ -291,7 +291,7 @@ window.mobileCheck = function() {
     ├ 3、月付、季付、半年付、年付<strong>同价</strong>。
     ├ 4、<em>意外情况</em>退房，按天算房租，<span style="text-decoration: underline;">多余房租全额退还</span>。
     ├ 5、<strong>不提前</strong>半个月乃至一天，<strong>要求</strong>交房租。
-    ├ 6、<span style="text-decoration: underline;">在房租到期日</span>正在搬家，可多给<strong>3天免租</strong><sup>（人情规则）</sup>。
+    ├ 6、<span style="text-decoration: underline;">在房租到期日</span>正在搬家，可多给<strong>3天时间免租</strong>搬家<sup>（人情规则）</sup>。
     ├ 7、入乡随俗，包基本的水电使用费。
     ├ 8、钥匙自己配，<em>不巧立名目</em>收押金。
     ├ 9、口说有凭；即使后期彼此有矛盾，公事公办，<em>不为嫌恨心反悔</em>以上规则。
