--- a/inn.html
+++ b/inn.html
@@ -289,7 +289,7 @@ window.mobileCheck = function() {
     ├ 1、<strong>无</strong>押金。
     ├ 2、短租、长租的<strong>月租金一样</strong>。
     ├ 3、月付、季付、半年付、年付的<strong>月租金一样</strong>。
-    ├ 4、<em>意外情况</em>退房，<strong>按天</strong>算租金，<span style="text-decoration: underline;">多余租金全额退还</span>。
+    ├ 4、<em>意外情况</em>退租，<strong>按天</strong>算租金，<span style="text-decoration: underline;">多余租金全额退还</span>。
     ├ 5、<strong>不提前</strong>半个月乃至一天，<strong>要求</strong>交房租。
     ├ 6、<span style="text-decoration: underline;">在房租到期日</span>正在搬家，可多给<strong>3天时间免租</strong>搬家<sup>（人情规则）</sup>。
     ├ 7、入乡随俗，包基本的水电使用费。
