--- a/inn.html
+++ b/inn.html
@@ -39,7 +39,7 @@ sub {
 .rooms, .about {
   float: left;
   width: 50%;
-  max-width: 350px;
+  max-width: 450px;
   margin-bottom: 20px;
 }
 
@@ -245,8 +245,14 @@ window.mobileCheck = function() {
   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">生活</span><div class="collapse-body">
   │ │ ├ 山泉水
   │ │ ├ 镇农贸市场<sub>（<mark>每月4次大型集市</mark>）</sub>
-  │ │ ├ 快递网点<sub>（邮政、中通、申通、极兔、圆通、韵达）</sub>
-  │ │ ├ 便利生活超市<sub>（多个）</sub>
+  │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">快递网点</span><div class="collapse-body">
+  │ │ │ ├ 邮政
+  │ │ │ ├ 中通
+  │ │ │ ├ 申通
+  │ │ │ ├ 极兔
+  │ │ │ ├ 圆通
+  │ │ │ └ 韵达</div></div>
+  │ │ ├ 便利生活超市
   │ │ ├ 咖啡馆
   │ │ ├ 云南农村信用银行
   │ │ └ 很多旅居的邻居
@@ -259,10 +265,11 @@ window.mobileCheck = function() {
   │</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">3千米范围内</span><div class="collapse-body">
   │ ├ 环洱海生态走廊
-  │ │ └ 盘溪村S湾<sub>（距离3.6千米）</sub>
+  │ │ └ 盘溪村S湾<sub>（非直线距离3.6千米）</sub>
   │ └ 更多的民宿、农场、庄园，及来自五湖四海的邻居。
   │</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">6千米范围内</span><div class="collapse-body">
+  │ ├ 无为寺
   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">素食街</span><div class="collapse-body">
   │ │ ├ 念福素火锅
   │ │ ├ 二元斋<sup></sup>
