--- a/inn.html
+++ b/inn.html
@@ -138,7 +138,7 @@ window.mobileCheck = function() {
 
 <div style="margin-bottom: 10px;">&copy;<a href="/" target="_blank"><strong>布袋豆腐</strong></a><sup style="border: 0;">（2023-2024）</sup></div>
 <pre class="rooms">
-<span style="color: red; font-weight: bold;">家庭民宿出租（500-700元/月）</span>
+<span style="color: red; font-weight: bold;">家庭民宿出租</span>
 ├ 二楼
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公用区域</span><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="二楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
@@ -166,18 +166,18 @@ window.mobileCheck = function() {
 │ │       └ 4把原木<sup>无漆</sup>餐椅</div></div>
 │ │</div></div>
 │ └ 房间
-│   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">203室</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="203室" title="点击查看图片">图片</span><div class="collapse-body">
+│   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">203室（500元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="203室" title="点击查看图片">图片</span><div class="collapse-body">
 │   │ ├ 租金
-│   │ │ └ 500元/月<sub>（含基本水电）</sub>。
+│   │ │ └ 含基本水电的使用。
 │   │ └ 家具
 │   │   ├ 原木<sup>无漆</sup>单人床
 │   │   ├ 原木<sup>无漆</sup>床头柜
 │   │   └ 原木<sup>无漆</sup>书桌
 │   │     └ 1把椅子
 │   │</div></div>
-│   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">204室</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="204室" title="点击查看图片">图片</span><div class="collapse-body">
+│   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">204室（550元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="204室" title="点击查看图片">图片</span><div class="collapse-body">
 │     ├ 租金
-│     │ └ 550元/月<sub>（含基本水电）</sub>。
+│     │ └ 含基本水电的使用。
 │     └ 家具
 │       ├ 原木<sup>无漆</sup>双人床
 │       ├ 原木<sup>无漆</sup>床头柜
@@ -210,31 +210,31 @@ window.mobileCheck = function() {
   │       └ 4把户外椅子</div></div>
   │</div></div>
   └ 房间
-    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">301室</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="301室" title="点击查看图片">图片</span><div class="collapse-body">
-    │ ├ 家具
-    │ │ ├ 实木双人床
-    │ │ ├ 原木<sup>无漆</sup>床头柜
-    │ │ └ 原木<sup>无漆</sup>书桌
-    │ │   └ 1把椅子
-    │ └ 租金
-    │   └ 700元/月<sub>（含基本水电）</sub>。
+    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">301室（700元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="301室" title="点击查看图片">图片</span><div class="collapse-body">
+    │ ├ 租金
+    │ │ └ 含基本水电的使用。
+    │ └ 家具
+    │   ├ 实木双人床
+    │   ├ 原木<sup>无漆</sup>床头柜
+    │   └ 原木<sup>无漆</sup>书桌
+    │     └ 1把椅子
     │</div></div>
-    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">302室</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="302室" title="点击查看图片">图片</span><div class="collapse-body">
-    │ ├ 家具
-    │ │ ├ 原木<sup>无漆</sup>单人床
-    │ │ ├ 原木<sup>无漆</sup>床头柜
-    │ │ └ 原木<sup>无漆</sup>书桌
-    │ │   └ 1把椅子
-    │ └ 租金
-    │   └ 500元/月<sub>（含基本水电）</sub>。
+    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">302室（500元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="302室" title="点击查看图片">图片</span><div class="collapse-body">
+    │ ├ 租金
+    │ │ └ 含基本水电的使用。
+    │ └ 家具
+    │   ├ 原木<sup>无漆</sup>单人床
+    │   ├ 原木<sup>无漆</sup>床头柜
+    │   └ 原木<sup>无漆</sup>书桌
+    │     └ 1把椅子
     │</div></div>
-    └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">303室</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="303室" title="点击查看图片">图片</span><div class="collapse-body">
-      ├ 家具
-      │ ├ 实木双人床
-      │ └ 原木<sup>无漆</sup>书桌
-      │   └ 1把椅子
-      └ 租金
-        └ 600元/月<sub>（含基本水电）</sub>。</div></div>
+    └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">303室（600元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="303室" title="点击查看图片">图片</span><div class="collapse-body">
+      ├ 租金
+      │ └ 含基本水电的使用。
+      └ 家具
+        ├ 实木双人床
+        └ 原木<sup>无漆</sup>书桌
+          └ 1把椅子</div></div>
 </pre>
 <pre class="about">
 <span style="color: green; font-weight: bold;">关于</span>
