--- a/inn.html
+++ b/inn.html
@@ -284,7 +284,8 @@ window.mobileCheck = function() {
   │</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">7千米范围内</span><div class="collapse-body">
   │ ├ 素方舟
-  │ └ 大理古城</div></div>
+  │ └ 大理古城
+  │</div></div>
   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">10千米范围内</span><div class="collapse-body">
     ├ 大理大学
     └ 喜洲古镇<sup><mark>直线距离≈10千米</mark></sup></div></div></div></div>
