--- a/inn.html
+++ b/inn.html
@@ -302,7 +302,7 @@ window.mobileCheck = function() {
 ├ 8、入乡随俗，包基本的水电使用费。
 ├ 9、钥匙自己配，<em>不巧立名目</em>收押金。
 ├ 10、口说有凭；即使后期彼此有矛盾，公事公办，<em>不为嫌恨心反悔</em>以上规则。
-└ 11、期间如遇到其他情况，对着公平和诚心协商处理；不为贪婪、嗔恨、嫌慢，以谄曲心<sup>（滑头）</sup>来强取、方便取<sup>（盗窃）</sup>租客的财产。
+└ 11、期间如遇到其他情况，对着公平和诚心的原则协商处理；不为贪婪、嗔恨、嫌慢，以谄曲心<sup>（滑头）</sup>来强取、方便取<sup>（盗窃）</sup>租客的财产。
 </pre>
 <div style="margin: 15px; text-align: center;"><span style="text-decoration: underline dotted; cursor: pointer;" onclick="this.style.display = 'none'; this.parentNode.querySelector('mark').style.display = 'inline';">已了解情况，点击查看联系方式。</span><mark style="display: none;">电话：19542586219，微信：（同电话号）。</mark></div>
 <div id="gallery">
