--- a/inn.html
+++ b/inn.html
@@ -297,12 +297,12 @@ window.mobileCheck = function() {
 ├ 3、淡季、旺季的<strong>月租金一样</strong>。
 ├ 4、月付、季付、半年付、年付的<strong>月租金一样</strong>。
 ├ 5、<em>意外情况</em>退租，<strong>按天</strong>算租金，<span style="text-decoration: underline;">多余租金全额退还</span>。
-├ 6、<strong>不提前</strong>半个月乃至一天，<strong>要求</strong>交房租。
-├ 7、<span style="text-decoration: underline;">在房租到期日</span>正在搬家，可多给<strong>3天时间免租</strong>搬家<sup>（人情规则）</sup>。
+├ 6、<strong>不提前</strong>半个月乃至一天，<strong>要求</strong>续交房租。
+├ 7、<span style="text-decoration: underline;">在房租到期日</span>正在搬家的，可多给<strong>3天免租</strong>时间予搬家<sup>（人情规则）</sup>。
 ├ 8、入乡随俗，包基本的水电使用费。
-├ 9、钥匙自己配，<em>不巧立名目</em>收押金。
-├ 10、口说有凭；即使后期彼此有矛盾，公事公办，<em>不为嫌恨心反悔</em>以上规则。
-└ 11、期间如遇到其他情况，对着公平和诚心的原则协商处理；不为贪婪、嗔恨、嫌慢，以谄曲心<sup>（滑头）</sup>来强取、方便取<sup>（盗窃）</sup>租客的财产。
+├ 9、不收钥匙押金，配钥匙费用自理。
+├ 10、口说有凭；即使后期彼此间有矛盾，按照以上规则<em>公事公办</em>。
+└ 11、期间如遇到其他情况，对着公平和诚心的原则协商处理。
 </pre>
 <div style="margin: 15px; text-align: center;"><span style="text-decoration: underline dotted; cursor: pointer;" onclick="this.style.display = 'none'; this.parentNode.querySelector('mark').style.display = 'inline';">已了解情况，点击查看联系方式。</span><mark style="display: none;">电话：19542586219，微信：（同电话号）。</mark></div>
 <div id="gallery">
