--- a/inn.html
+++ b/inn.html
@@ -140,7 +140,7 @@ window.mobileCheck = function() {
 <pre class="rooms">
 <span style="color: red; font-weight: bold;">家庭民宿出租</span>
 ├ 二楼
-│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公用区域</span><div class="collapse-body">
+│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公共区域</span><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="二楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
 │ │ │ └ 基础设施
 │ │ │   ├ 淋浴（热水）
@@ -185,7 +185,7 @@ window.mobileCheck = function() {
 │         └ 1把椅子</div></div>
 │
 └ 三楼
-  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公用区域</span><div class="collapse-body">
+  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公共区域</span><div class="collapse-body">
   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="三楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
   │ │ └ 基础设施
   │ │   ├ 淋浴（热水）
@@ -265,7 +265,6 @@ window.mobileCheck = function() {
   │</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">3千米范围内</span><div class="collapse-body">
   │ ├ 环洱海生态走廊
-  │ │ └ 盘溪村S湾<sub>（非直线距离3.6千米）</sub>
   │ └ 更多的民宿、农场、庄园，及来自五湖四海的邻居。
   │</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">6千米范围内</span><div class="collapse-body">
