--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@ layout: null
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
+  <p><strong>没有这个页面 :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
