--- a/inn.html
+++ b/inn.html
@@ -17,6 +17,8 @@ a, a:hover, a:active, a:visited {
 
 pre {
   font-size: 16px;
+  padding: 0 10px;
+  box-sizing: border-box;
   overflow: scroll;
 }
 
@@ -25,8 +27,8 @@ pre div {
 }
 
 sup, sub {
+  color: orange;
   font-size: 65%;
-  font-style: italic;
   border-bottom: 1px dotted;
   position: relative;
 }
@@ -146,8 +148,8 @@ window.mobileCheck = function() {
 
 <div style="margin-bottom: 10px;">&copy;<a href="/" target="_blank"><strong>布袋豆腐</strong></a><sup style="border: 0;">（2023-2024）</sup></div>
 <pre class="rooms">
-<span style="color: red; font-weight: bold;">家庭民宿出租</span>
-├ 二楼
+<b>家庭民宿出租</b>
+├ <b>二楼</b>
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公共区域</span><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="二楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
 │ │ │ └ 基础设施
@@ -158,8 +160,8 @@ window.mobileCheck = function() {
 │ │ │   └ 化妆柜（含镜子）</div></div>
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">客厅</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="客厅" title="点击查看图片">图片</span><div class="collapse-body">
 │ │ │ └ 家具
-│ │ │   ├ 原木<sup>无漆</sup>会议桌
-│ │ │   │ └ 4把办公椅
+│ │ │   ├ 原木会议桌<sup>无漆</sup>
+│ │ │   │ └ 椅子x6
 │ │ │   └ 沙发
 │ │ │</div></div>
 │ │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">厨房</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="厨房" title="点击查看图片">图片</span><div class="collapse-body">
@@ -170,29 +172,36 @@ window.mobileCheck = function() {
 │ │     │ ├ 冷藏：83升。
 │ │     │ └ 冷冻：52升。</div></div>
 │ │     ├ 电磁炉
-│ │     └ 原木<sup>无漆</sup>餐桌
-│ │       └ 4把原木<sup>无漆</sup>餐椅</div></div>
+│ │     └ 原木餐桌<sup>无漆</sup>
+│ │       └ 原木餐椅x4<sup>无漆</sup></div></div>
 │ │</div></div>
-│ └ 房间
+│ └ <b>房间</b>
 │   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">203室（600元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="203室" title="点击查看图片">图片</span><div class="collapse-body">
 │   │ ├ 租金
 │   │ │ └ 含基本水电的使用。
 │   │ └ 家具
-│   │   ├ 原木<sup>无漆</sup>单人床
-│   │   ├ 原木<sup>无漆</sup>床头柜
-│   │   └ 原木<sup>无漆</sup>书桌
-│   │     └ 1把椅子
+│   │   ├ 原木壁挂置物架（4钩）<sup>无漆</sup>
+│   │   ├ 原木单人床<sup>无漆</sup>
+│   │   ├ 原木床头柜<sup>无漆</sup>
+│   │   └ 原木书桌<sup>无漆</sup>
+│   │     ├ 氛围台灯
+│   │     ├ 仿真植物
+│   │     └ 椅子
 │   │</div></div>
 │   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">204室（650元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="204室" title="点击查看图片">图片</span><div class="collapse-body">
 │     ├ 租金
 │     │ └ 含基本水电的使用。
 │     └ 家具
-│       ├ 原木<sup>无漆</sup>双人床
-│       ├ 原木<sup>无漆</sup>床头柜
-│       └ 原木<sup>无漆</sup>书桌
-│         └ 1把椅子</div></div>
+│       ├ 原木壁挂置物架（6钩）<sup>无漆</sup>
+│       ├ 原木衣架<sup>无漆</sup>
+│       ├ 原木双人床<sup>无漆</sup>
+│       ├ 原木床头柜<sup>无漆</sup>
+│       └ 原木书桌<sup>无漆</sup>
+│         ├ 氛围台灯
+│         ├ 仿真植物
+│         └ 椅子</div></div>
 │
-└ 三楼
+└ <b>三楼</b>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公共区域</span><div class="collapse-body">
   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="三楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
   │ │ └ 基础设施
@@ -203,89 +212,90 @@ window.mobileCheck = function() {
   │ │   └ 化妆柜（含镜子）</div></div>
   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">阳台</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="阳台" title="点击查看图片">图片</span><div class="collapse-body">
   │ │ └ 家具
-  │ │   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">沙发</span><div class="collapse-body">
-  │ │   │ ├ 原木<sup>无漆</sup>三人座
-  │ │   │ ├ 原木<sup>无漆</sup>二人座
-  │ │   │ └ 原木<sup>无漆</sup>一人座</div></div>
-  │ │   └ 茶几</div></div>
+  │ │   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">原木沙发<sup>无漆</sup></span><div class="collapse-body">
+  │ │   │ ├ 三人座x1
+  │ │   │ ├ 二人座x1
+  │ │   │ └ 一人座x1</div></div>
+  │ │   └ 茶几<sup>无漆</sup></div></div>
   │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">晾衣区</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="晾衣区" title="点击查看图片">图片</span><div class="collapse-body">
   │   └ 家具
   │     ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">晾衣绳</span><div class="collapse-body">
   │     │ └ 22米</div></div>
-  │     ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">洗衣机</span><div class="collapse-body">
-  │     │ └ 10KG容量</div></div>
-  │     └ 户外桌
-  │       └ 4把户外椅子</div></div>
+  │     └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">洗衣机</span><div class="collapse-body">
+  │       └ 10KG容量</div></div></div></div>
   │</div></div>
-  └ 房间
-    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">301室（800元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="301室" title="点击查看图片">图片</span><div class="collapse-body">
+  └ <b>房间</b>
+    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">301室（750元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="301室" title="点击查看图片">图片</span><div class="collapse-body">
     │ ├ 租金
     │ │ └ 含基本水电的使用。
     │ └ 家具
+    │   ├ 原木壁挂置物架（6钩）<sup>无漆</sup>
+    │   ├ 原木衣架<sup>无漆</sup>
     │   ├ 实木双人床
-    │   ├ 原木<sup>无漆</sup>床头柜
-    │   └ 原木<sup>无漆</sup>书桌
-    │     └ 1把椅子
+    │   ├ 原木床头柜<sup>无漆</sup>
+    │   └ 原木书桌<sup>无漆</sup>
+    │     ├ 氛围台灯
+    │     ├ 仿真植物
+    │     └ 椅子
     │</div></div>
     ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">302室（600元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="302室" title="点击查看图片">图片</span><div class="collapse-body">
     │ ├ 租金
     │ │ └ 含基本水电的使用。
     │ └ 家具
-    │   ├ 原木<sup>无漆</sup>单人床
-    │   ├ 原木<sup>无漆</sup>床头柜
-    │   └ 原木<sup>无漆</sup>书桌
-    │     └ 1把椅子
+    │   ├ 原木壁挂置物架（4钩）<sup>无漆</sup>
+    │   ├ 原木单人床<sup>无漆</sup>
+    │   ├ 原木床头柜<sup>无漆</sup>
+    │   └ 原木书桌<sup>无漆</sup>
+    │     ├ 氛围台灯
+    │     ├ 仿真植物
+    │     └ 椅子
     │</div></div>
-    └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">303室（700元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="303室" title="点击查看图片">图片</span><div class="collapse-body">
+    └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">303室（650元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="303室" title="点击查看图片">图片</span><div class="collapse-body">
       ├ 租金
       │ └ 含基本水电的使用。
       └ 家具
+        ├ 原木壁挂置物架（6钩）<sup>无漆</sup>
+        ├ 原木衣架<sup>无漆</sup>
         ├ 实木双人床
-        └ 原木<sup>无漆</sup>书桌
-          └ 1把椅子</div></div>
+        └ 原木书桌<sup>无漆</sup>
+          ├ 氛围台灯
+          ├ 仿真植物
+          └ 椅子</div></div>
 </pre>
 <pre class="about">
-<span style="color: green; font-weight: bold;">关于</span>
-├ 地点
-│ └ 银桥镇头铺村<sub>（<span>弘正教育</span>旁）</sub>
+<b>相关信息</b>
+├ <b>地点</b>
+│ └ 银桥镇头铺村
 └ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">周边环境</span><div class="collapse-body active">
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">500米范围内</span><div class="collapse-body">
-  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">生活</span><div class="collapse-body">
-  │ │ ├ 山泉水
-  │ │ ├ 镇农贸市场<sub>（<mark>每月4次大型集市</mark>）</sub>
-  │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">快递网点</span><div class="collapse-body">
-  │ │ │ ├ 邮政
-  │ │ │ ├ 中通
-  │ │ │ ├ 申通
-  │ │ │ ├ 极兔
-  │ │ │ ├ 圆通
-  │ │ │ └ 韵达</div></div>
-  │ │ ├ 便利生活超市
+  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">生活相关</span><div class="collapse-body">
+  │ │ ├ 公交车站
+  │ │ ├ 打山泉水处
+  │ │ ├ <b>镇农贸市场</b>
+  │ │ │ └ <mark>每月4次大型集市</mark>
+  │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><b>快递网点</b></span><div class="collapse-body">
+  │ │ │ └  圆通、申通、极兔、中通、韵达</div></div>
+  │ │ ├ <b>早餐店</b>
   │ │ ├ 咖啡馆
-  │ │ ├ 云南农村信用银行
-  │ │ └ 很多旅居的邻居
+  │ │ ├ 便利生活超市
+  │ │ ├ 药店
+  │ │ ├ <b>镇卫生院</b>
+  │ │ ├ <b>云南农村信用银行</b>
+  │ │ ├ 中国邮政
+  │ │ ├ 幼儿园/中学
+  │ │ └ <em>很多旅居的邻居</em>
   │ │</div></div>
-  │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">行政</span><div class="collapse-body">
+  │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">行政相关</span><div class="collapse-body">
   │   ├ 镇政府
-  │   ├ 镇卫生院
-  │   ├ 镇公安局
-  │   └ 镇幼儿园/中学</div></div>
+  │   └ 镇公安局</div></div>
   │</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">3千米范围内</span><div class="collapse-body">
   │ ├ 环洱海生态走廊
-  │ └ 更多的民宿、农场、庄园，及来自五湖四海的邻居。
+  │ └ 更多的民宿、农场、庄园，和来自五湖四海的邻居。
   │</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">6千米范围内</span><div class="collapse-body">
   │ ├ 无为寺
-  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">素食街</span><div class="collapse-body">
-  │ │ ├ 念福素火锅
-  │ │ ├ 二元斋<sup></sup>
-  │ │ ├ 亲善堂<sup></sup>
-  │ │ ├ 素养工坊<sup></sup>
-  │ │ ├ 善晓为
-  │ │ ├ 长素面
-  │ │ ├ 素乐餐厅
-  │ │ └ 普茶</div></div>
+  │ ├ 素食街
   │ ├ 三塔
   │ └ 崇圣寺
   │</div></div>
@@ -298,22 +308,23 @@ window.mobileCheck = function() {
     └ 喜洲古镇<sup><mark>直线距离≈10千米</mark></sup></div></div></div></div>
 </pre>
 <pre class="rules">
-我们的规则
-├ 1、<strong>无</strong>押金。
-├ 2、短租、长租的<strong>月租金一样</strong>。
-├ 3、淡季、旺季的<strong>月租金一样</strong>。
-├ 4、月付、季付、半年付、年付的<strong>月租金一样</strong>。
-├ 5、<em>意外情况</em>退租，<strong>按天</strong>算租金，<span style="text-decoration: underline;">多余租金全额退还</span>。
-├ 6、<strong>不提前</strong>半个月乃至一天，<strong>要求</strong>续交房租。
-├ 7、<span style="text-decoration: underline;">在房租到期日</span>正在搬家的，可多给<strong>3天免租</strong>时间予搬家<sup>（人情规则）</sup>。
-├ 8、入乡随俗，包基本的水电使用费。
-├ 9、不收钥匙押金，配钥匙费用自理。
-├ 10、即使后期彼此间产生矛盾，按照以上规则<em>公事公办</em>。
-└ 11、期间如遇到其他情况，依着公平诚心的原则协商处理。
+<mark>我们从节约、环保、实用及品质等多个方面的考量，采购的家具基本上都是<strong>原木、无漆的</strong>。<br>此外，我自己拟了以下11条我们租房子的原则。</mark>
+
+1、<strong>无</strong>押金。
+2、短租、长租的<strong>月租金一样</strong>。
+3、淡季、旺季的<strong>月租金一样</strong>。
+4、月付、季付、半年付、年付的<strong>月租金一样</strong>。
+5、<em>意外情况</em>退租，<strong>按天</strong>算租金，<span style="text-decoration: underline;">多余租金全额退还</span>。
+6、<strong>不提前</strong>半个月乃至一天，<strong>要求</strong>续交房租。
+7、<span style="text-decoration: underline;">在房租到期日</span>正在搬家的，可多给<strong>3天免租</strong>时间予搬家<sup>（人情规则）</sup>。
+8、入乡随俗，包基本的水电使用费。
+9、不收钥匙押金，配钥匙费用自理。
+10、即使后期彼此间产生矛盾，按照以上规则<em>公事公办</em>。
+11、期间如遇到其他情况，依着公平诚心的原则协商处理。
 </pre>
-<div style="margin: 15px; text-align: center;"><span style="text-decoration: underline dotted; cursor: pointer;" onclick="this.style.display = 'none'; this.parentNode.querySelector('mark').style.display = 'inline';">已了解情况，点击查看联系方式。</span><mark style="display: none;">电话：19542586219，微信：同电话号。</mark></div>
+<div style="margin: 35px; text-align: center;"><span style="color: red; font-weight: bold; text-decoration: underline; font-size: 110%; cursor: pointer;" onclick="this.style.display = 'none'; this.parentNode.querySelector('mark').style.display = 'inline';">已了解情况，点击查看联系方式。</span><mark style="display: none;">电话：19542586219，微信：同电话号。</mark></div>
 <div id="gallery">
-  <div class="loading" style="position: absolute; left: 0; top: 0; background-color: black; color: white; font-size: 70%; padding: 0 5px; width: 58px;"></div>
+  <div class="loading" style="position: absolute; left: 0; top: 0; background-color: black; color: white; font-size: 70%; padding: 0 5px; width: 60px;"></div>
   <div>
     <span class="close-btn"><span>╳</span></span>
   </div>
