--- a/inn.html
+++ b/inn.html
@@ -271,17 +271,16 @@ window.mobileCheck = function() {
   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">生活相关</span><div class="collapse-body">
   │ │ ├ 公交车站
   │ │ ├ 打山泉水处
-  │ │ ├ <b>镇农贸市场</b>
-  │ │ │ └ <mark>每月4次大型集市</mark>
+  │ │ ├ <b>早餐店</b>
+  │ │ ├ 餐饮店
+  │ │ ├ <b>农贸市场</b>（<mark>每月4次大型集市</mark>）
+  │ │ ├ 便利生活超市
+  │ │ ├ 咖啡馆
   │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><b>快递网点</b></span><div class="collapse-body">
   │ │ │ └  圆通、申通、极兔、中通、韵达</div></div>
-  │ │ ├ <b>早餐店</b>
-  │ │ ├ 咖啡馆
-  │ │ ├ 便利生活超市
-  │ │ ├ 药店
+  │ │ ├ 中国邮政
   │ │ ├ <b>镇卫生院</b>
   │ │ ├ <b>云南农村信用银行</b>
-  │ │ ├ 中国邮政
   │ │ ├ 幼儿园/中学
   │ │ └ <em>很多旅居的邻居</em>
   │ │</div></div>
@@ -291,21 +290,19 @@ window.mobileCheck = function() {
   │</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">3千米范围内</span><div class="collapse-body">
   │ ├ 环洱海生态走廊
-  │ └ 更多的民宿、农场、庄园，和来自五湖四海的邻居。
+  │ └ 更多的民宿、农场、庄园。
   │</div></div>
-  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">6千米范围内</span><div class="collapse-body">
-  │ ├ 无为寺
-  │ ├ 素食街
-  │ ├ 三塔
-  │ └ 崇圣寺
-  │</div></div>
-  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">7千米范围内</span><div class="collapse-body">
-  │ ├ 素方舟
-  │ └ 大理古城
-  │</div></div>
-  └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">10千米范围内</span><div class="collapse-body">
-    ├ 大理大学
-    └ 喜洲古镇<sup><mark>直线距离≈10千米</mark></sup></div></div></div></div>
+  └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">7千米范围内</span><div class="collapse-body">
+    ├ 无为寺
+    ├ 素食街
+    ├ 三塔
+    ├ 崇圣寺
+    ├ <del style="opacity: .5;">素方舟（7.2千米）</del>
+    ├ <del style="opacity: .5;">大理古城北门（7.7千米）</del>
+    ├ <del style="opacity: .5;">三月街（8.2千米）</del>
+    ├ <del style="opacity: .5;">杨丽萍大剧院（9.7千米）</del>
+    ├ <del style="opacity: .5;">大理大学（9.8千米）</del>
+    └ <del style="opacity: .5;">喜洲古镇（12千米）</del></div></div></div></div>
 </pre>
 <pre class="rules">
 <mark>我们从节约、环保、实用及品质等多个方面的考量，采购的家具基本上都是<strong>原木、无漆的</strong>。<br>此外，我自己拟了以下11条我们租房子的原则。</mark>
