--- a/inn.html
+++ b/inn.html
@@ -319,7 +319,7 @@ window.mobileCheck = function() {
 10、即使后期彼此间产生矛盾，按照以上规则<em>公事公办</em>。
 11、期间如遇到其他情况，依着公平诚心的原则协商处理。
 </pre>
-<div style="margin: 35px; text-align: center;"><span style="color: red; font-weight: bold; text-decoration: underline; font-size: 110%; cursor: pointer;" onclick="this.style.display = 'none'; this.parentNode.querySelector('mark').style.display = 'inline';">已了解情况，点击查看联系方式。</span><mark style="display: none;">电话：19542586219，微信：同电话号。</mark></div>
+<div style="margin: 35px; color: red; font-size: 110%; font-weight: bold; text-align: center;"><span style="text-decoration: underline; cursor: pointer;" onclick="this.style.display = 'none'; this.parentNode.querySelector('mark').style.display = 'inline';">已了解情况，点击查看联系方式。</span><mark style="display: none;">电话：19542586219，微信：同电话号。</mark></div>
 <div id="gallery">
   <div class="loading" style="position: absolute; left: 0; top: 0; background-color: black; color: white; font-size: 70%; padding: 0 5px; width: 60px;"></div>
   <div>
