--- a/inn.html
+++ b/inn.html
@@ -26,6 +26,10 @@ pre div {
   display: inline;
 }
 
+abbr {
+  cursor: help;
+}
+
 sup, sub {
   color: orange;
   font-size: 65%;
@@ -41,7 +45,6 @@ sub {
 .rooms, .about {
   float: left;
   width: 50%;
-  max-width: 450px;
   margin-bottom: 20px;
 }
 
@@ -274,22 +277,42 @@ window.mobileCheck = function() {
 │ └ 银桥镇头铺村
 └ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">周边环境</span><div class="collapse-body active">
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">500米范围内</span><div class="collapse-body">
-  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">生活相关</span><div class="collapse-body">
-  │ │ ├ 公交车站
-  │ │ ├ 山泉水取水处
-  │ │ ├ <b>早餐店</b>
-  │ │ ├ 餐饮店
-  │ │ ├ <b>农贸市场</b>（<mark>每月4次大型集市</mark>）
-  │ │ ├ 便利生活超市
-  │ │ ├ 咖啡馆
-  │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><b>快递网点</b></span><div class="collapse-body">
-  │ │ │ └ 圆通、申通、极兔、中通、韵达</div></div>
-  │ │ ├ 中国邮政
-  │ │ ├ <b>镇卫生院</b>
-  │ │ ├ <b>云南农村信用银行</b>
-  │ │ ├ 幼儿园/中学
-  │ │ └ <em>很多旅居的邻居</em></div></div>
-  │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">行政相关</span><div class="collapse-body">
+  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">生活</span><div class="collapse-body">
+  │ │ ├ <abbr title="公交车">bus</abbr> ─ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">C7路</span><div class="collapse-body">
+  │ │ │       ├ 九孔桥
+  │ │ │       ├ 鹤阳
+  │ │ │       ├ <b>银桥镇政府（本站）</b>
+  │ │ │       ↓
+  │ │ │       ├ 阳波
+  │ │ │       ├ 无为寺
+  │ │ │       ├ 北五里桥
+  │ │ │       ├ 双阳
+  │ │ │       ├ 绿桃村
+  │ │ │       ├ 三塔路口
+  │ │ │       ├ 三月街口（换乘：4、古城C2、C10环等）
+  │ │ │       ├ 人民路口（换乘：4、古城C2等）
+  │ │ │       ├ 一塔路口
+  │ │ │       ├ 弘圣路口
+  │ │ │       ├ 山水间
+  │ │ │       └ 大理财校（换乘：古城C2、大理大学专线）</div></div>
+  │ │ │ 
+  │ │ │       ┌ 山泉水取水处
+  │ │ │       ├ <b>早餐店</b>
+  │ │ ├ <abbr title="日常">daily</abbr> ┼ 餐饮店
+  │ │ │       ├ 便利生活超市
+  │ │ │       ├ <b>农贸市场</b>（<mark>每月4次大型集市</mark>）
+  │ │ │       ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><b>快递网点</b></span><div class="collapse-body">
+  │ │ │       │ └ 圆通、申通、极兔、中通、韵达</div></div>
+  │ │ │       └ 咖啡馆
+  │ │ │ 
+  │ │ │        ┌ 中国邮政
+  │ │ │        ├ <b>镇卫生院</b>
+  │ │ ├ <abbr title="其他">others</abbr> ┼ 云南农村信用银行
+  │ │ │        ├ 幼儿园（多个）
+  │ │ │        └ 镇中学
+  │ │ │
+  │ │ └ <b>外地来旅居的邻居</b></div></div>
+  │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">行政</span><div class="collapse-body">
   │   ├ 镇政府
   │   └ 镇公安局</div></div>
   │</div></div>
