--- a/inn.html
+++ b/inn.html
@@ -355,12 +355,12 @@ window.mobileCheck = function() {
 <div style="white-space: pre-wrap;">
 2点要求：
 A、不能养宠物。
-B、我们推崇健康的素食生活，我自己本人也是长期素食者。因此<span style="text-decoration: underline solid red 4px;"><strong>公用的厨房</strong>里不能出现荤腥的东西（包括蛋类）</span>；<span style="color: lightgreen; font-weight: bold; text-decoration: underline solid lightgreen 4px;">牛奶及其他奶制品允许</span>。
+B、我们推崇健康的素食生活，我自己本人也是长期素食者。因此<span style="color: red; text-decoration: underline solid red 4px;"><strong>公用的厨房</strong>里不能出现荤腥的东西（包括蛋类）</span>；<span style="color: lightgreen; font-weight: bold; text-decoration: underline solid lightgreen 4px;">牛奶及其他奶制品允许</span>。
 
 <em>备注：我们会不定期地，免费提供一些自制的豆制品给大家。比如：豆浆，豆腐、豆干、油豆腐等。</em>
 </div>
 </pre>
-<div style="margin: 35px; color: red; font-size: 110%; font-weight: bold; text-align: center;"><span style="text-decoration: underline; cursor: pointer;" onclick="this.style.display = 'none'; this.parentNode.querySelector('mark').style.display = 'inline';">→已了解情况，有意加入我们；请点击查看联系方式。</span><mark style="display: none;">电话：19542586219，微信：同电话号。</mark></div>
+<div style="margin: 35px; font-size: 110%; font-weight: bold; text-align: center;"><span style="text-decoration: underline; cursor: pointer;" onclick="this.style.display = 'none'; this.parentNode.querySelector('mark').style.display = 'inline';">→已了解情况，有意加入我们；请点击查看联系方式。</span><mark style="display: none;">电话：19542586219，微信：同电话号。</mark></div>
 <div style="font-size: 125%; font-weight: bold; text-align: center; margin: 20px 0;"><span style="color: white; background-color: lightgreen;">健康、环保、节约、品质、积极<sup class="supa"><abbr title="注：①此处引用的“健康”、“环保”、“节约”、“品质”、“积极”5个词语，所赋予的涵义属于我们个人的定义；不同人之间的标准会有所差别。">①</abbr></sup>。</span></div>
 <div id="gallery">
   <div class="loading" style="position: absolute; left: 0; top: 0; background-color: black; color: white; font-size: 70%; padding: 0 5px; width: 60px;"></div>
