--- a/inn.html
+++ b/inn.html
@@ -294,9 +294,9 @@ window.mobileCheck = function() {
   │ │        ├ 镇公安局
   │ │        └ 镇政府
   │ │
-  │ ├ <b>外地来旅居的邻居</b>
+  │ ├ <b>很多外地来旅居的邻居</b>
   │ │
-  │ └ <abbr>出行</abbr>
+  │ └ <abbr>外出</abbr>
   │   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">C7路公交车</span><div class="collapse-body">
   │     ├ 九孔桥
   │     ├ 鹤阳
@@ -317,7 +317,7 @@ window.mobileCheck = function() {
   │</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">3千米范围内</span><div class="collapse-body">
   │ ├ 环洱海生态走廊
-  │ └ 更多的民宿、农场、庄园。
+  │ └ 更多的民宿、农场、庄园，及来自五湖四海的邻居。
   │</div></div>
   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">7千米范围内</span><div class="collapse-body">
     ├ 无为寺
