--- a/inn.html
+++ b/inn.html
@@ -278,42 +278,51 @@ window.mobileCheck = function() {
 └ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">周边环境</span><div class="collapse-body active">
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">500米范围内</span><div class="collapse-body">
   │ │       ┌ 山泉水取水处
-  │ │       ├ <b>早餐店</b>
+  │ │       ├ 早餐店
   │ ├ <abbr title="日常">daily</abbr> ┼ 餐饮店
   │ │       ├ 便利生活超市
-  │ │       ├ <b>农贸市场</b>（<mark>每月4次大型集市</mark>）
-  │ │       ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><b>快递网点</b></span><div class="collapse-body">
+  │ │       ├ 农贸市场（<mark>每月4次大型集市</mark>）
+  │ │       ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">快递网点</span><div class="collapse-body">
   │ │       │ └ 圆通、申通、极兔、中通、韵达</div></div>
   │ │       └ 咖啡馆
   │ │ 
   │ │        ┌ 中国邮政
-  │ │        ├ <b>镇卫生院</b>
+  │ │        ├ 镇卫生院
   │ ├ <abbr title="其他">others</abbr> ┼ 云南农村信用银行
   │ │        ├ 幼儿园（多个）
   │ │        ├ 镇中学
   │ │        ├ 镇公安局
   │ │        └ 镇政府
   │ │
-  │ ├ <b>很多外地来旅居的邻居</b>
+  │ ├ 很多外地来旅居的邻居
   │ │
-  │ └ <abbr>外出</abbr>
+  │ └ <b>外出</b>
   │   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">C7路公交车</span><div class="collapse-body">
   │     ├ 九孔桥
   │     ├ 鹤阳
   │     ├ <b>银桥镇政府（本站）</b>
   │     ↓
+  │     ├ 银桥幼儿园
+  │     ├ 磻曲
+  │     ├ 银桥村
   │     ├ 阳波
-  │     ├ 无为寺
-  │     ├ 北五里桥
+  │     ├ 阳乡
+  │ 3KM⇥├ 无为寺
   │     ├ 双阳
+  │     ├ 北五里桥
   │     ├ 绿桃村
-  │     ├ 三塔路口
-  │     ├ 三月街口（换乘：4、古城C2、C10环等）
-  │     ├ 人民路口（换乘：4、古城C2等）
+  │≈6KM⇥├ 三塔路口
+  │≈6KM⇥├ 北门桥头
+  │     ├ 水碓村
+  │≈8KM⇥├ 三月街口
+  │≈8KM⇥├ 人民路口
+  │≈8KM⇥├ 红龙井
   │     ├ 一塔路口
+  │     ├ 玉局路口
+  │     ├ 学府路口
   │     ├ 弘圣路口
   │     ├ 山水间
-  │     └ 大理财校（换乘：古城C2、大理大学专线）</div></div>
+  │     └ 大理财校</div></div>
   │</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">3千米范围内</span><div class="collapse-body">
   │ ├ 环洱海生态走廊
