--- a/inn.html
+++ b/inn.html
@@ -329,7 +329,7 @@ window.mobileCheck = function() {
   │ └ 更多的民宿、农场、庄园，及来自五湖四海的邻居。
   │</div></div>
   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">7千米范围内</span><div class="collapse-body">
-    ├ 无为寺
+    ├ 无为寺（灵鹫山大门）
     ├ 素食街
     ├ 三塔
     ├ 崇圣寺
