--- a/inn.html
+++ b/inn.html
@@ -348,7 +348,7 @@ window.mobileCheck = function() {
 </pre>
 <pre class="rules">
 <div style="white-space: pre-wrap;">
-<mark>我们采购的家具基本上都是<strong>原木、无漆</strong>的，以健康、简朴、实用性为第一。</mark>
+<mark>我们采购的家具很多都是<strong>原木、无漆</strong>的，以健康、简朴、实用性为第一。</mark>
 
 此外，我们希望租给想长期居住的人，短租的至少有计划租一个月。以下是我们制定的一些原则和要求。</div>
 
