--- a/inn.html
+++ b/inn.html
@@ -131,6 +131,10 @@ sub {
   max-width: 100%;
 }
 
+.on-mobile .rooms {
+  margin-top: 110px;
+}
+
 @media only screen and (max-width: 800px) {
   .rooms, .about, .rules {
     float: none;
