--- a/inn.html
+++ b/inn.html
@@ -356,7 +356,7 @@ window.mobileCheck = function() {
    ├ 淡季、旺季；
    └ 月付、季付、半年付、年付。
 二、<span style="text-decoration: underline solid 2px red;">租金包基本的水电使用费</span>。
-三、<span style="text-decoration: underline solid 2px red;">无房租押金</span>。
+三、<span style="text-decoration: underline solid 2px red;">无租房押金</span>。
 四、<span style="text-decoration: underline solid 2px red;">不提前要求续交房租</span>，包括提前半个月乃至提前一天。
 五、<span style="text-decoration: underline solid 2px red;">按天算租金</span>；意外情况退租，多余租金全额退还。
 六、<span style="text-decoration: underline solid 2px red;">提供3天的免租时间</span>，对于要搬走又赶上房租到期的人。
