--- a/inn.html
+++ b/inn.html
@@ -276,7 +276,7 @@ window.mobileCheck = function() {
           └ 椅子</div></div></div></div>
 </pre>
 <pre class="about">
-<b>周边环境</b>
+<b>生活圈</b>
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">500米范围内</span><div class="collapse-body">
 │ │┌ 山泉水取水处
 │ │├ 早餐店
