--- a/inn.html
+++ b/inn.html
@@ -162,6 +162,7 @@ window.mobileCheck = function() {
 <pre class="rooms">
 ├ <b>地点</b>
 │ └ 银桥镇头铺村
+├ <b>院内</b><span class="gallery-open-btn" data-src="/assets/img/inn/1/01.jpg" data-alt="院内图1" title="点击查看图片">图1</span><span class="gallery-open-btn" data-src="/assets/img/inn/1/02.jpg" data-alt="院内图2" title="点击查看图片">图2</span>
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">二楼</span><div class="collapse-body">
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公共区域</span><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="二楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
@@ -283,8 +284,9 @@ window.mobileCheck = function() {
 │ │├ 餐饮店
 │ ├┼ 便利生活超市
 │ │├ 农贸市场（<mark>每月4次大型集市</mark>）
-│ │├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">快递网点</span><div class="collapse-body">
-│ ││ └ 圆通、申通、极兔、中通、韵达</div></div>
+│ │├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">快递/物流点</span><div class="collapse-body">
+│ ││ ├ 自提网点：圆通、申通、极兔、中通、韵达，及邮政。
+│ ││ └ 送货上门：顺丰、京东、德邦等。</div></div>
 │ │└ 咖啡馆
 │ │┌ 幼儿园（多个）
 │ │├ 镇中学
@@ -294,27 +296,27 @@ window.mobileCheck = function() {
 │ │├ 镇公安局
 │ │└ 镇政府
 │ ├ 很多旅居的邻居
-│ └ <b>外出</b>
-│   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">C7路公交车</span><div class="collapse-body">
-│     ├ 九孔桥
-│     ├ 鹤阳
-│     ├ <b>银桥镇政府（本站）</b>
+│ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><b>外出</b></span><div class="collapse-body">
+│   │ C7路公交车
+│   │ ├ 九孔桥
+│   │ ├ 鹤阳
+│   └─┼ <b>银桥镇政府（本站公交车站）</b>
 │     ↓
 │     ├ 银桥幼儿园
 │     ├ 磻曲
 │     ├ 银桥村
 │     ├ 阳波
 │     ├ 阳乡
-│ 3KM⇥├ 无为寺
+│  3KM├ 无为寺
 │     ├ 双阳
 │     ├ 北五里桥
 │     ├ 绿桃村
-│≈6KM⇥├ 三塔路口
-│≈6KM⇥├ 北门桥头
+│ ≈6KM├ 三塔路口
+│ ≈6KM├ 北门桥头
 │     ├ 水碓村
-│≈8KM⇥├ 三月街口
-│≈8KM⇥├ 人民路口
-│≈8KM⇥├ 红龙井
+│ ≈8KM├ 三月街口
+│ ≈8KM├ 人民路口
+│ ≈8KM├ 红龙井
 │     ├ 一塔路口
 │     ├ 玉局路口
 │     ├ 学府路口
@@ -337,8 +339,6 @@ window.mobileCheck = function() {
   │ └ 7.7千米</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><del style="opacity: .5;">三月街</del></span><div class="collapse-body">
   │ └ 8.2千米</div></div>
-  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><del style="opacity: .5;">杨丽萍大剧院</del></span><div class="collapse-body">
-  │ └ 9.7千米</div></div>
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><del style="opacity: .5;">大理大学</del></span><div class="collapse-body">
   │ └ 9.8千米</div></div>
   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><del style="opacity: .5;">喜洲古镇</del></span><div class="collapse-body">
